# anvesha_crawler

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
anvesha/: index.html  package-lock.json  package.json  vite.config.ts
anvesha/.github/workflows/: deploy.yml
anvesha/src/: App.tsx  main.tsx
anvesha/src/SystemArchitecture/: SystemArchitecture.tsx
anvesha/src/hooks/: useScrollIntensity.ts  useScrollLock.ts
anvesha/src/pages/: Docs.tsx  NotFound.tsx
anvesha/src/routes/: Anvesha.tsx
anvesha/src/styles/: globals.css
anvesha/src/utils/: motion.ts
anvesha/src/webgl/: CanvasRoot.tsx  FirewallScene.tsx
config/: default.toml
migrations/: 001_initial.sql  004_add_pagerank.sql  005_add_tfidf_score.sql
src/: lib.rs  main.rs
src/algorithms/: graph.rs  mod.rs  pagerank.rs  tfidf.rs
src/algorithms/tests/: mod.rs  pagerank_integration_test.rs  pagerank_test.rs
src/config/: crawler_config.rs  database_config.rs  mod.rs
src/config/tests/: crawler_config_tests.rs  mod.rs
src/core/: crawler.rs  mod.rs  page_processor.rs  scheduler.rs  url_frontier.rs
src/core/mod/: mod.rs  scheduler.rs  url_frontier.rs
src/core/tests/: crawler_tests.rs  mod.rs  page_processor_tests.rs  scheduler_tests.rs  url_frontier_tests.rs
src/models/: crawl_result.rs  crawl_url.rs  mod.rs  page_data.rs  statistics.rs
src/models/tests/: crawl_url_tests.rs  mod.rs  (+2 more)
src/network/: error_handler.rs  http_client.rs  mod.rs  response_handler.rs
src/search/: filters.rs  indexer.rs  mod.rs  query.rs  schema.rs  snippets.rs
src/storage/: cache.rs  database.rs  export.rs  mod.rs  models.rs  repository.rs  search_index.rs
src/utils/: bloom_filter.rs  logging.rs  metrics.rs  mod.rs  url_utils.rs
tests/: integration_tests.rs
(+30 files in other folders)
