[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
sqlx = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
send = "0.8.0"
url = "2.5.7"
dashmap = "7.0.0-rc2"
scraper = "0.24.0"
thiserror = "2.0.16"
