[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "migrate", "uuid"] }
chrono = { version = "0.4.42", features = ["serde"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
send = "0.8.0"
url = "2.5.7"
dashmap = "7.0.0-rc2"
scraper = "0.24.0"
thiserror = "2.0.16"
reqwest = { version = "0.12.23", features = ["json", "stream", "gzip", "brotli"] }
encoding_rs = "0.8.35"
log = "0.4.28"
assert = "0.7.5"
tantivy = "0.25.0"
moka = { version = "0.12.10", features = ["sync"] }
sha2 = "0.11.0-rc.2"
csv = "1.3.1"
tempfile = "3.23.0"
serde_json = "1.0.145"
hex = "0.4.3"
pool = "0.1.4"
lazy_static = "1.4"


[patch-crates-io]
time = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"  # For mocking HTTP responses
serial_test = "3.0"  # For tests that need to run sequentially

